# qimpy

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  mpi_print_from_head.sh  pyproject.toml  setup.cfg  setup.py  versioneer.py
.githooks/: pre-commit
docs/: requirements.txt
docs/source/: .gitignore  api.rst  conf.py  index.rst  inputfile.rst  install.rst  modules.rst  qimpy.electrons.rst  qimpy.grid.rst  qimpy.ions.rst  qimpy.lattice.rst  qimpy.rst  qimpy.symmetries.rst  qimpy.utils.rst  transportinput.rst
docs/source/_ext/: yamldoc.py
docs/source/_templates/: class.rst  module.rst
docs/source/api/: qimpy.System.rst  qimpy.construct.rst  qimpy.dict_input_cleanup.rst  qimpy.electrons.Basis.rst  qimpy.electrons.CheFSI.rst  qimpy.electrons.Davidson.rst  qimpy.electrons.Electrons.rst  qimpy.electrons.Fillings.rst  qimpy.electrons.Kmesh.rst  qimpy.electrons.Kpath.rst  qimpy.electrons.Kpoints.rst  qimpy.electrons.rst  (+31 more)
examples/: .gitignore  Hatom.yaml  NaCl-ClVac.py  minimize.py
examples/CoSi/: totalE.yaml
examples/Cu/: bandstruct.yaml  totalE.yaml
examples/Graphene/: bandstruct.yaml  totalE.yaml
examples/Jellium/: totalE.yaml
examples/Molecules/: H2.yaml  H2O-triclinic.yaml  H2O.yaml  H2Osol.yaml  Hatom-SOC.yaml  Hatom.yaml  O2.yaml  OH-.yaml
examples/NaCl-ClVac/: totalE.py  totalE.yaml
examples/Pt-SOC/: totalE.yaml
examples/Si/: bandstruct.yaml  totalE.yaml
examples/Transport/: .gitignore  plot.yaml  rect-domain.yaml  rect-periodic.yaml  rect-with-leads-plot.yaml  rect-with-leads.yaml  semicircle.yaml
src/: README.md  mypy.ini
src/qimpy/: README.md  __init__.py  _construct.py  _energy.py  _gpu_init.py  _input.py  _ions.py  _lattice.py  _log.py  _runconfig.py  _system.py  _tree.py  _version.py  conftest.py  energy.py  pre_init.py  profiler.py  qimpy_input_test.yaml  rc.py  run.py  tree.py
tests/: .gitignore  Cu.yaml  H-solid.yaml  H2.yaml  H2O.yaml  Hatom-SOC.yaml  Hatom.yaml  NaCl-ClVac.py  NaCl-ClVac.yaml  O2.yaml  OH-.yaml  Pt-SOC.yaml  README.md  Si.yaml  conftest.py  jellium.yaml  minimize.py  mpi_print_from_head.sh
tests/electrons/: test_fillings.py  test_wavefunction_init_split.py
tests/grid/: __init__.py  test_change.py  test_fft.py  test_field.py
tests/ions/: test_pseudopotential.py  test_quintic_spline.py  test_spherical_bessel.py  test_spherical_harmonics.py
tests/utils/: test_minimize.py
(+387 files in other folders)
