[metadata]
name = qimpy
version = 0.0.1
author = QimPy Collaboration
author_email = author@example.com
description = Quantum-Integrated Multi-PhYsics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://qimpy.org
project_urls =
    Bug Tracker = https://github.com/shankar1729/qimpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
