[metadata]
name = qimpy
author = QimPy Collaboration
author_email = author@example.com
description = Quantum-Integrated Multi-PhYsics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://qimpy.org
project_urls =
    Bug Tracker = https://github.com/shankar1729/qimpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch >1.8
    pyyaml
    numpy
    psutil

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/qimpy/_version.py
versionfile_build = qimpy/_version.py
tag_prefix = v
parentdir_prefix = qimpy-
